fix: cleanup paralax on mobile, add loaders to steps

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,5 +7,12 @@ $export: (
         'colors': $colors
 );
 
+//to style the loading bar themes
+@each $value in $colors {
+  .loader--#{map-get($value, 'color')}:after{
+    background-color: #{map-get($value, hexValue)} !important;
+  }
+}
+
 @debug json-encode;
 @include json-encode($value: $export, $selector: '#sassData');
